--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,11 @@
 <body>
     <h1>ÆÆÆ</h1>
     <p id="text_field">æææ</p>
+    <p id="tasks_p"></p>
 
-
-    <button id="btn" onclick="ask()">not_a_virus</button>
+    <input id="task" type="text" placeholder="Æ">
+    <button id="btn" onclick="ask()">Knappknapp</button>
+    <button id="task_btn" onclick="load_tasks()">PLIS GI MEG NOEN TASKS JEG VIL IKKE VÆRE SUSSY IMPORTER!</button>
     <script src="client.js"></script>
 </body>
 </html>
