--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ÆÆÆÆÆ</title>
+    <title>ChætChæt</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,17 +12,26 @@
 
     <h1>ChætChæt</h1>
     <p id="text_field">chæt</p>
+    <div id="big_box">
+        <div id="chatting">
+            <div id="chatbox"></div>
+            <div id="chatinput">
+                <input id="taskbox" type="text" placeholder="Æ">
+                <button id="btn" onclick="ask()">Knappknapp</button>
+            </div>
+        </div>
+        <div id="login_div">
 
-    <div id="chatting">
-        <div id="chatbox"></div>
-        <div id="chatinput">
-            <input id="taskbox" type="text" placeholder="Æ">
-            <button id="btn" onclick="ask()">Knappknapp</button>
+            <h1>LOG INN!!!</h1>
+                <label for="brukerbox">Brukernavn</label>
+                <input type="text" name="brukernavn" id="brukerbox">
+
+                <label for="passordbox">Passord</label>
+                <input type="text" name="password" id="passordbox">
+            
+                <button onclick="attempt_log_in()">logg inn</button>
         </div>
     </div>
-    
-    <input id="brukerbox" type="text" placeholder="Brukernavn">
-    <button onclick="start_log_in()">log inn test</button>
 
     <ul id="tasks_ul"></ul>
     <script src="client.js"></script>
