man kan bare slette egne meldinger

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
                 <button onclick="attempt_log_in()">logg inn</button>
         </div>
     </div>
+    <button onclick="log_out()">logg inn</button>
+
 
     <ul id="tasks_ul"></ul>
     <script src="client.js"></script>
